# FastAPI-Weather

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: router.py
app/core/: config.py  logging_config.py
app/services/: dynamodb.py  openweather.py  s3_bucket.py
app/utils/: setup_services.py
